--- a/localisation/cot_funky_shit_l_english.yml
+++ b/localisation/cot_funky_shit_l_english.yml
@@ -2,17 +2,17 @@
  V01:0 "Ebonrik"
  V01_ADJ:0 "Ebonriker"
  V01_ADJ2:0 "Ebonriker"
- V01_1:0 "Legacy of the Ebonfrost dynasty"
- V01_1_desc:0 "TBA"
- V01_2:0 "indiscriminate Reaving"
- V01_2_desc:0 "TBA"
+ V01_1:0 "Legacy of the Ebon Guard"
+ V01_1_desc:0 "The Ebonguard were the stalwart and greatest defenders of the Jarl of Urviksten and then the Emperor of Castanor. One-hundred in total, these Olavish housecrals clad head-to-toe in Ebonsteel inspired fear and awe in equal measure, and served as the iron fist of the Ebonfrost Dynasty."
+ V01_2:0 "A Second Age of Black Ice"
+ V01_2_desc:0 "The First Age of Black Ice was marked by the invasion of western Cannor by the Gerudians. Gerudian Longships swarmed the Diven and Dameshead sacking and looting with near impunity. With near-total control of the Reach, our longships will once more go south, ushering in a second era of Black Ice."
  V01_3:0 "The Munitions Act of 865"
- V01_3_desc:0 "TBA"
+ V01_3_desc:0 "The Munitions Act of 865 was encated by Castan XLIX Ebonfrost when he was still only a lowly reaver in order to efficiently distribute valuable Ebonsteel weapons among his soldiers. This meritocratic system awarded those who proved themselves with more and more Ebonsteel arms and armor which served as a badge of honor and rank."
  V01_4:0 "Olavish Stratocracy"
- V01_4_desc:0 "Ebonriker"
+ V01_4_desc:0 "While the Reachmen compose a significant number of our population, their service in our kingdom will be relegated to aiding us in an economic fashion. Our military will remain entrenched in the traditions and ways of our Olavish ancestors who proved themselves greater than the Reachmen by the rite of conquest."
  V01_5:0 "Black-Flag Marines"
- V01_5_desc:0 "TBA"
+ V01_5_desc:0 "A Gerudian finds fighting on sea as natural as if it were fighting on land. A sea-faring people, young Gerudians spend as much time on longships as they on solid ground. This has allowed us to carry our martial prowess to the waves and distant shores."
  V01_6:0 "Industry of Eastern Reach"
- V01_6_desc:0 "TBA"
+ V01_6_desc:0 "The Timber Barons of the Reach have long held a strong influence in the region and accumulated a vast sum of wealth for themselves. Integrating them into our new regime and opening the way for more economic opportunities for them will line our coffers and ensure their loyalty."
  V01_7:0 "The Eboncharge"
- V01_7_desc:0 "TBA"
+ V01_7_desc:0 " "The Eboncharge was a military innovation that marked the beginning of Ebonfrost dominance in Gerudia and Escann. With his armies composed mostly of heavy infantry and lightly armored berserkers, Castan XLIX leveraged the natural duralibity and strength of Ebonsteel and an unrelenting drill to temper the Bersker's fury into a potently lethal weapon."
