--- a/localisation/cot_funky_shit_l_english.yml
+++ b/localisation/cot_funky_shit_l_english.yml
@@ -2,6 +2,9 @@
  V01:0 "Ebonrik"
  V01_ADJ:0 "Ebonriker"
  V01_ADJ2:0 "Ebonriker"
+ V01_ideas:0 "Adenner Ideas"
+ V01_ideas_start:0 "Adenner Traditions"
+ V01_ideas_bonus:0 "Adenner Ambitions"
  V01_1:0 "Legacy of the Ebon Guard"
  V01_1_desc:0 "The Ebonguard were the stalwart and greatest defenders of the Jarl of Urviksten and then the Emperor of Castanor. One-hundred in total, these Olavish housecrals clad head-to-toe in Ebonsteel inspired fear and awe in equal measure, and served as the iron fist of the Ebonfrost Dynasty."
  V01_2:0 "A Second Age of Black Ice"
