--- a/localisation/cot_funky_shit_l_english.yml
+++ b/localisation/cot_funky_shit_l_english.yml
@@ -19,3 +19,24 @@
  V01_6_desc:0 "The Timber Barons of the Reach have long held a strong influence in the region and accumulated a vast sum of wealth for themselves. Integrating them into our new regime and opening the way for more economic opportunities for them will line our coffers and ensure their loyalty."
  V01_7:0 "The Eboncharge"
  V01_7_desc:0 " "The Eboncharge was a military innovation that marked the beginning of Ebonfrost dominance in Gerudia and Escann. With his armies composed mostly of heavy infantry and lightly armored berserkers, Castan XLIX leveraged the natural duralibity and strength of Ebonsteel and an unrelenting drill to temper the Bersker's fury into a potently lethal weapon."
+ 
+ V02:0 "Ozhkredu"
+ V02_ADJ:0 "Ozhkreduan"
+ V02_ADJ2:0 "Ozhkreduan"
+ V02_ideas:0 "Ozhkreduan Ideas"
+ V02_ideas_start:0 "Ozhkreduan Traditions"
+ V02_ideas_bonus:0 "Ozhkreduan Ambitions"
+ V02_1:0 "School of the Hidden Spider"
+ V02_1_desc:0 "The School of the Hidden Spider is the fighting style of the Serpentspine goblins. This technique involves the use of utilizing the environment to the user's advantage and the use of evasion, and to lure the attacker, when then, the user strikes at the weak point, and then, retreats back to evasive maneuvers. The goblins, of course, are most adept to using this style due to their small size. Though many conservatives in the Xia call it cowardly, it is hard to admit it isn't effective."
+ V02_2:0 "The Misty Mountains"
+ V02_2_desc:0 "Ever since the introduction of martial arts to the Serpentspine Goblins, many began to nickname the Jademines the "misty mountains". It got this name due to the amount of goblins inhabiting the Serpentspine that were masters of martial arts. This large amount of goblin monks in warriors makes it difficult for invading forces to attack the mines due to the amount of goblin fighters waiting at every corner."
+ V02_3:0 "The Under Temples "
+ V02_3_desc:0 "With the introduction of the Righteous path to the goblins, the first step was obviously create the great temples of the Xia underground. These temples are carved into the mountains of the Serpentspine, and due to their Halessi and goblin influence, they make many visitors into the realm go into awe, as such a grand structure of non-dwarven origin in the mountains was a surprise to many."
+ V02_4:0 "Goblin Cultivation"
+ V02_4_desc:0 "Many of the Goblins with the foundation of Ozhkredu were very confused, due to the goblin lifestyle being one of scavenging, greed and debauchery, and were in shock at the ideals of the Xia. But, with many in the Xia coming into Ozhkredu to assist the goblins into a new lifestyle, the goblins came to respect and admire the Xia advisors as enlighteners, and went to emulate them instead of dismissing their ideas."
+ V02_5:0 "The Trial of the Cave"
+ V02_5_desc:0 "With the reformation of the goblin army in Ozhkredu, a new trial for all who wished to go into the army was implemented. Every goblin must fight a giant cave spider, one on one and completely unarmed. Though this challenge is usually deadly, and a majority do not pass, those who do make it into the goblin ranks are extremally capable and disciplined, making the armies of Ozhkredu distinct form the usual goblin-wave so common among the Serpentspine Goblins."
+ V02_6:0 "Cavern's of Enlightenment"
+ V02_6_desc:0 "Many goblins, on the way to enlightenment looked at the caves of the Serpentspine to aid them. In the caves, the goblins would practice a very simple lifestyle, and would stay there for a few months to a few years. These goblins after living in the caves alone for so long brought their knowledge to the army, and these techniques of simple cave living would be implemented in the regiments of the Ozhkredu armies."
+ V02_7:0 "A Temple for All"
+ V02_7_desc:0 "With the new enlightened goblin state in the Jademines, many in the Xia, amazed at what the goblins, a race of stereotypically greedy and appalling race became. Many began migrating the Surface Holds of the Jademines. They were of course, welcomed in open arms, and soon, the holds of Gronstunad and Verkal Dromak began looking a lot like the lands of the Xianjie."
