--- a/localisation/cot_formable_nations_decision_l_english.yml
+++ b/localisation/cot_formable_nations_decision_l_english.yml
@@ -5,4 +5,4 @@ Z15_form_ebonrik_desc:0 "The Rule of the Ebonfrost Dynasty in Urviksten dates ba
 
 #Ozhkredu
 R66_form_ozhkredu_title:0 "Embrace our Xia Identity"
-R66_form_ozhkredu_desc:0 "When the people of the Xia found us we were but weak and poor slaves to the hobgoblin Command. Now however we learned from them and adapted to their teachings, it is time we fully become of of the Xia with our very own fighting Style!"
+R66_form_ozhkredu_desc:0 "When the people of the Xia found us we were but weak and poor slaves to the hobgoblin Command. Now however we learned from them and adapted to their teachings, it is time we fully become one of the Xia with our very own fighting Style!"
