--- a/localisation/cot_formable_nations_decision_l_english.yml
+++ b/localisation/cot_formable_nations_decision_l_english.yml
@@ -6,3 +6,7 @@ Z15_form_ebonrik_desc:0 "The Rule of the Ebonfrost Dynasty in Urviksten dates ba
 #Ozhkredu
 R66_form_ozhkredu_title:0 "Embrace our Xia Identity"
 R66_form_ozhkredu_desc:0 "When the people of the Xia found us we were but weak and poor slaves to the hobgoblin Command. Now however we learned from them and adapted to their teachings, it is time we fully become one of the Xia with our very own fighting Style!"
+
+#Sarakhep
+V03_form_sarakhep_title:0 "Unite Bulwar and Kheterata!"
+V03_form_sarakhep_desc:0 "Through our conquest we see ourselves now ruling over much of Bulwar, we should extend the reach of the Khetarch to these new Lands and form a shared identity."
