--- a/localisation/cot_funky_shit_l_english.yml
+++ b/localisation/cot_funky_shit_l_english.yml
@@ -40,3 +40,10 @@
  V02_6_desc:0 "Many goblins, on the way to enlightenment looked at the caves of the Serpentspine to aid them. In the caves, the goblins would practice a very simple lifestyle, and would stay there for a few months to a few years. These goblins after living in the caves alone for so long brought their knowledge to the army, and these techniques of simple cave living would be implemented in the regiments of the Ozhkredu armies."
  V02_7:0 "A Temple for All"
  V02_7_desc:0 "With the new enlightened goblin state in the Jademines, many in the Xia, amazed at what the goblins, a race of stereotypically greedy and appalling race became. Many began migrating the Surface Holds of the Jademines. They were of course, welcomed in open arms, and soon, the holds of Gronstunad and Verkal Dromak began looking a lot like the lands of the Xianjie."
+
+ V03:0 "Sarakhep"
+ V03_ADJ:0 "Sarakhepi"
+ V03_ADJ2:0 "Sarakhepi"
+ V03_ideas:0 "Sarakhepi Ideas"
+ V03_ideas_start:0 "Sarakhepi Traditions"
+ V03_ideas_bonus:0 "Sarakhepi Ambitions"
