Derrancor + a small "{" fix
Just the Loc for the Ideas is missing

--- a/localisation/cot_funky_shit_l_english.yml
+++ b/localisation/cot_funky_shit_l_english.yml
@@ -47,3 +47,16 @@
  V03_ideas:0 "Sarakhepi Ideas"
  V03_ideas_start:0 "Sarakhepi Traditions"
  V03_ideas_bonus:0 "Sarakhepi Ambitions"
+
+
+
+
+
+
+
+V06:0 "Derrancor"
+V06_ADJ:0 "Derranic"
+V06_ADJ2:0 "Derranic"
+V06_ideas:0 "Derrancori Ideas"
+V06_ideas_start:0 "Derrancori Traditions"
+V06_ideas_bonus:0 "Derrancori Ambitions"
