--- a/localisation/cot_formable_nations_decision_l_english.yml
+++ b/localisation/cot_formable_nations_decision_l_english.yml
@@ -10,3 +10,7 @@ R66_form_ozhkredu_desc:0 "When the people of the Xia found us we were but weak a
 #Sarakhep
 V03_form_sarakhep_title:0 "Unite Bulwar and Kheterata!"
 V03_form_sarakhep_desc:0 "Through our conquest we see ourselves now ruling over much of Bulwar, we should extend the reach of the Khetarch to these new Lands and form a shared identity."
+
+#Deranncor
+V06_form_deranncor_title:0 "Move to Aelantir!"
+V06_form_deranncor_desc:0 "It is time we leave our cannorian possessions behind and move our focus onto Aelantir, a continent full of adventures to go on and, more importantly, coin to be made."
