Aisgard everything except Idea and Decision desc loc

--- a/localisation/cot_formable_nations_decision_l_english.yml
+++ b/localisation/cot_formable_nations_decision_l_english.yml
@@ -13,4 +13,8 @@ V03_form_sarakhep_desc:0 "Through our conquest we see ourselves now ruling over 
 
 #Deranncor
 V06_form_deranncor_title:0 "Move to Aelantir!"
-V06_form_deranncor_desc:0 "It is time we leave our cannorian possessions behind and move our focus onto Aelantir, a continent full of adventures to go on and, more importantly, coin to be made."
+V06_form_deranncor_desc:0 "It is time we leave our cannorian possessions behind and move our focus onto Aelantir, a continent full of adventures to go on and, more importantly, coin to be made."^
+
+#Aisgard
+V07_form_aisgard_title:0 "A Tale of Ice and Snow"
+V07_form_aisgard_desc:0 "Nothing to see here move on."
