--- a/localisation/cot_funky_shit_l_english.yml
+++ b/localisation/cot_funky_shit_l_english.yml
@@ -74,3 +74,10 @@ V06_6:0 "Strangers Among Us"
 V06_6_desc:0 "Some times the communities in our state are too hostile to our beliefs, either through their religious practices or cultural traditions, we try to make them see the errors of their ways, but sometimes a more harsh hand is required to guide the impostors to the truth. "
 V06_7:0 "MK1 Lancewood Rifles"
 V06_7_desc:0 "Fighting in the dense forests of Aelantir during the Eordand wars, lead to our ever-growing engineer-corps innovating a new technique in firearm production adding helical grooves to the barrel improving the accuracy of the firearm, and inventing a new mechanism of loading said new firearms, derived from the breechloaders used on our Gun Crawlers and with the dual invention of the "Bullet" by the up and coming inventor Sigismund Lancewood, the performance of our troops should increase tenfold!"
+
+V07:0 "Aisgard"
+V07_ADJ:0 "Aisgarder"
+V07_ADJ2:0 "Aisgarder"
+V07_ideas:0 "Aisgarder Ideas"
+V07_ideas_start:0 "Aisgarder Traditions"
+V07_ideas_bonus:0 "Aisgarder Ambitions"
