Changes, changes happen every day

--- a/localisation/cot_funky_shit_l_english.yml
+++ b/localisation/cot_funky_shit_l_english.yml
@@ -54,9 +54,9 @@
 
 
 
-V06:0 "Derrancor"
-V06_ADJ:0 "Derranic"
-V06_ADJ2:0 "Derranic"
-V06_ideas:0 "Derrancori Ideas"
-V06_ideas_start:0 "Derrancori Traditions"
-V06_ideas_bonus:0 "Derrancori Ambitions"
+V06:0 "Deranncor"
+V06_ADJ:0 "Derannic"
+V06_ADJ2:0 "Derannic"
+V06_ideas:0 "Deranncori Ideas"
+V06_ideas_start:0 "Deranncori Traditions"
+V06_ideas_bonus:0 "Deranncori Ambitions"
