--- a/localisation/cot_rp_rewards_l_english.yml
+++ b/localisation/cot_rp_rewards_l_english.yml
@@ -1,5 +1,5 @@
 ﻿l_english: 
- cot_rp_rewards.1.t:0 "Funky RP-Rewarder 8000"
- cot_rp_rewards.1.d:0 "Yup, just click one of these funky buttons, vaass, you look handsome today <3"
- cot_rp_rewards.1.a:0 "Discipline"
- cot_rp_rewards.1.b:0 "Land Morale"
+ cot_larankar_sun_elves:0 "Sun Elven Autonomy"
+ cot_sun_elven_migrants_g:0 "Sun Elven Influence"
+ cot_civil_war:0 "Recovering from Civil War"
+ wexonard_imperium:0 "Wexonard Imperium"
