--- a/localisation/cot_rp_rewards_l_english.yml
+++ b/localisation/cot_rp_rewards_l_english.yml
@@ -3,3 +3,4 @@
  cot_sun_elven_migrants_g:0 "Sun Elven Influence"
  cot_civil_war:0 "Recovering from Civil War"
  wexonard_imperium:0 "Wexonard Imperium"
+ goulha_presence:0 "White Owl's Presence"
