--- a/localisation/cot_rp_rewards_l_english.yml
+++ b/localisation/cot_rp_rewards_l_english.yml
@@ -4,3 +4,10 @@
  cot_civil_war:0 "Recovering from Civil War"
  wexonard_imperium:0 "Wexonard Imperium"
  goulha_presence:0 "White Owl's Presence"
+ apaselu:0 "Apašelu - the Roost of Roosts" 
+ the_havoral_push:0 "The Havoral Push"
+ sea_elven_flotilla:0 "Sea Elven Flotilla"
+ hardy_hole:0 "Hardy Hole"
+ mirror_hall:0 "The Mirror Hall"
+ cot_aelantiri_capital_40:0 "Aelantiri Capital [40]" 
+ cot_aelantiri_capital_60:0 "Aelantiri Capital [60]" 
