Ruinhyl almost done :)

--- a/localisation/cot_funky_shit_l_english.yml
+++ b/localisation/cot_funky_shit_l_english.yml
@@ -48,11 +48,12 @@
  V03_ideas_start:0 "Sarakhepi Traditions"
  V03_ideas_bonus:0 "Sarakhepi Ambitions"
 
-
-
-
-
-
+ V04:0 "Ruinhyl"
+ V04_ADJ:0 "Ruinhyli"
+ V04_ADJ2:0 "Ruinhyli"
+ V04_ideas:0 "Ruinhylan Ideas"
+ V04_ideas_start:0 "Ruinhyli Traditions"
+ V04_ideas_bonus:0 "Ruinhyli Ambitions"
 
 V06:0 "Deranncor"
 V06_ADJ:0 "Derannic"
