--- a/localisation/cot_rp_rewards_l_english.yml
+++ b/localisation/cot_rp_rewards_l_english.yml
@@ -4,6 +4,7 @@
  cot_civil_war:0 "Recovering from Civil War"
  wexonard_imperium:0 "Wexonard Imperium"
  goulha_presence:0 "White Owl's Presence"
+ goulha_headquarters:0 "White Owl's Head-Quarters"
  apaselu:0 "Apašelu - the Roost of Roosts" 
  the_havoral_push:0 "The Havoral Push"
  sea_elven_flotilla:0 "Sea Elven Flotilla"
