Elvethan (no ideas loc)

--- a/localisation/cot_funky_shit_l_english.yml
+++ b/localisation/cot_funky_shit_l_english.yml
@@ -82,3 +82,10 @@ V07_ADJ2:0 "Aisgarder"
 V07_ideas:0 "Aisgarder Ideas"
 V07_ideas_start:0 "Aisgarder Traditions"
 V07_ideas_bonus:0 "Aisgarder Ambitions"
+
+V10:0 "Elvethán"
+V10_ADJ:0 "Elvetháni"
+V10_ADJ2:0 "Elvethánner"
+V10_ideas:0 "Elvetháni Ideas"
+V10_ideas_start:0 "Elvetháni Traditions"
+V10_ideas_bonus:0 "Elvetháni Ambitions"
