--- a/localisation/cot_funky_shit_l_english.yml
+++ b/localisation/cot_funky_shit_l_english.yml
@@ -42,6 +42,7 @@
  V02_7_desc:0 "With the new enlightened goblin state in the Jademines, many in the Xia, amazed at what the goblins, a race of stereotypically greedy and appalling race became. Many began migrating the Surface Holds of the Jademines. They were of course, welcomed in open arms, and soon, the holds of Gronstunad and Verkal Dromak began looking a lot like the lands of the Xianjie."
 
  V03:0 "Sarakhep"
+ snow_elf:0 "Snow Elf"
  V03_ADJ:0 "Sarakhepi"
  V03_ADJ2:0 "Sarakhepi"
  V03_ideas:0 "Sarakhepi Ideas"
