Lunyrsirar, No Idea Loc

--- a/localisation/cot_funky_shit_l_english.yml
+++ b/localisation/cot_funky_shit_l_english.yml
@@ -82,3 +82,26 @@ V07_ADJ2:0 "Aisgarder"
 V07_ideas:0 "Aisgarder Ideas"
 V07_ideas_start:0 "Aisgarder Traditions"
 V07_ideas_bonus:0 "Aisgarder Ambitions"
+
+
+
+V09:0 "Lunyrisar"
+V09_ADJ:0 "Lunyrsari"
+V09_ADJ2:0 "Lunyrsari"
+V09_ideas:0 "Lunyrsari Ideas"
+V09_ideas_start:0 "Lunyrsari Traditions"
+V09_ideas_bonus:0 "Lunyrsari Ambitions"
+V09_1:0 "As Luminous as the Moon"
+V09_1_desc:0 ""
+V09_2:0 "Glory Eternal"
+V09_2_desc:0 ""
+V09_3:0 "Integrate Ruinborn into our Army"
+V09_3_desc:0 ""
+V09_4:0 "Ruinborn Hegemony"
+V09_4_desc:0 ""
+V09_5:0 "Fine Architecture"
+V09_5_desc:0 ""
+V09_6:0 "Look toward the Future, Remember the Past"
+V09_6_desc:0 ""
+V09_7:0 "No Labour Shortages"
+V09_7_desc:0 ""
