--- a/localisation/cot_formable_nations_decision_l_english.yml
+++ b/localisation/cot_formable_nations_decision_l_english.yml
@@ -22,3 +22,7 @@ V06_form_deranncor_desc:0 "It is time we leave our cannorian possessions behind 
 #Aisgard
 V07_form_aisgard_title:0 "A Tale of Ice and Snow"
 V07_form_aisgard_desc:0 "Nothing to see here move on."
+
+#Lunyrisar
+V09_form_lunyrisar_title:0 "Adopt a shared Identity"
+V09_form_lunyrisar_desc:0 "Living side by side with the Ruinborn elves of Haraf has changed us and our way of looking at life. We learned from them as much as they did from us, it is time for our Nation to reflect our shared Identity!"
