--- a/localisation/cot_funky_shit_l_english.yml
+++ b/localisation/cot_funky_shit_l_english.yml
@@ -117,20 +117,20 @@ V08_ADJ2:0 "Seiranari"
 V08_ideas:0 "Seiranari Ideas"
 V08_ideas_start:0 "Seiranari Traditions"
 V08_ideas_bonus:0 "Seiranari Ambitions"
-V08_1:0 "x"
-V08_1_desc:0 "x"
-V08_2:0 "x"
-V08_2_desc:0 "x"
-V08_3:0 "x"
-V08_3_desc:0 "x"
-V08_4:0 "x"
-V08_4_desc:0 "x"
-V08_5:0 "x"
-V08_5_desc:0 "x"
-V08_6:0 "x"
-V08_6_desc:0 "x"
-V08_7:0 "x"
-V08_7_desc:0 "x"
+V08_1:0 "A Helmet for every head."
+V08_1_desc:0 "Our people are few, we cannot afford the lackluster military policies of our human neighbours."
+V08_2:0 "Arbefer, the Pearl of the North"
+V08_2_desc:0 "The Capital of Seiranar, Arbefer has grown significantly since our country's formation, neat quarters, elven architecture and the massive and imposing Royal Palace have all taught our architects well."
+V08_3:0 "Omnipotent Monarchy"
+V08_3_desc:0 "Other countries embrace feudalism - an outdated system of opressors and opressed - we shall not repeat that mistake - all are property of our King."
+V08_4:0 "Sielviula - A vessel for its time"
+V08_4_desc:0 "Sielviula is a very specific type of a ship, very popular in Seiranar - Both simple and utilitarian, our mechants adore them - only grumblings about it come from our Navy, who see it as a useless, at least in military usage, craft."
+V08_5:0 "Mage-Child Policies"
+V08_5_desc:0 "Powerful Mages - altough very educated and valueable tend to be having no children, such potential cannot be wasted - we shall implement wide social policies to make sure that such waste happens no more."
+V08_6:0 "A Gilded Court"
+V08_6_desc:0 "Our court is glamourous - it is a lie - one to keep our nobles in line, nothing else."
+V08_7:0 "Seiranari Batteries."
+V08_7_desc:0 "When Seiranari"
 
 V10:0 "Elvethán"
 V10_ADJ:0 "Elvetháni"
