--- a/localisation/cot_rp_rewards_l_english.yml
+++ b/localisation/cot_rp_rewards_l_english.yml
@@ -12,4 +12,7 @@
  mirror_hall:0 "The Mirror Hall"
  cot_aelantiri_capital_40:0 "Aelantiri Capital [40]" 
  cot_aelantiri_capital_60:0 "Aelantiri Capital [60]" 
+ war_torn_1:0 "War-Torn - Mild" 
+ war_torn_2:0 "War-Torn" 
+ war_torn_3:0 "War-Torn - Severe" 
  beloved_royal_couple:0 "Beloved Royal Couple" 
