--- a/localisation/cot_funky_shit_l_english.yml
+++ b/localisation/cot_funky_shit_l_english.yml
@@ -174,3 +174,24 @@ V09_6:0 "Look toward the Future, Remember the Past"
 V09_6_desc:0 ""
 V09_7:0 "No Labour Shortages"
 V09_7_desc:0 ""
+ 
+ V05:0 "Adennor"
+ V05_ADJ:0 "Adennori"
+ V05_ADJ2:0 "Adennori"
+ V05_ideas:0 "Adennori Ideas"
+ V05_ideas_start:0 "Adennori Traditions"
+ V05_ideas_bonus:0 "Adennori Ambitions"
+ V05_1:0 "To die is the greatest honour"
+ V05_1_desc:0 ""
+ V05_2:0 "Many races of Adennor"
+ V05_2_desc:0 ""
+ V05_3:0 "Everybody can join us"
+ V05_3_desc:0 ""
+ V05_4:0 "Everybody can be mage"
+ V05_4_desc:0 ""
+ V05_5:0 "Everybody can be protected"
+ V05_5_desc:0 ""
+ V05_6:0 "Chivalric traditions"
+ V05_6_desc:0 ""
+ V05_7:0 "Strong ruler, strong country"
+ V05_7_desc:0 ""
