--- a/localisation/cot_formable_nations_decision_l_english.yml
+++ b/localisation/cot_formable_nations_decision_l_english.yml
@@ -34,8 +34,14 @@ V09_form_lunyrisar_desc:0 "Living side by side with the Ruinborn elves of Haraf 
 #Elvethan
 V10_form_elvethan_title:0 "The New Order"
 V10_form_elvethan_desc:0 "The Sea Elven Flotilla has arrived."
-
-#Snow Elves
+ 
+ 
+ # Adennor
+ V05_form_adennor_title:0 "Proclaim Empire of Adennor"
+ V05_form_adennor_desc:0 "Horses go brrrrr"
+ 
+ 
+ #Snow Elves
 snow_elf:0 "Snow Elf"
 
 #New Names
