--- a/localisation/cot_rp_rewards_l_english.yml
+++ b/localisation/cot_rp_rewards_l_english.yml
@@ -28,3 +28,4 @@
  goulha_mil_1:0 "Goulhá - Military Help [1]"
  goulha_mil_2:0 "Goulhá - Military Help [2]"
  goulha_mil_3:0 "Goulhá - Military Help [3]"
+ taychend_hegemon:0 "Hegemon of the Taychend"
