--- a/localisation/cot_funky_shit_l_english.yml
+++ b/localisation/cot_funky_shit_l_english.yml
@@ -196,9 +196,9 @@ V09_7_desc:0 ""
  V05_7:0 "Strong ruler, strong country"
  V05_7_desc:0 ""
 
- v11:0 "Taychend"
- v11_adj:0 "Taychendi"
- v11_adj2:0 "Taychendi"
+ V11:0 "Taychend"
+ V11_adj:0 "Taychendi"
+ V11_adj2:0 "Taychendi"
  V11_ideas:0 "Taychendi Ideas"
  V11_ideas_start:0 "Taychendi Traditions"
  V11_ideas_bonus:0 "Taychendi Ambitions"
