--- a/localisation/cot_formable_nations_decision_l_english.yml
+++ b/localisation/cot_formable_nations_decision_l_english.yml
@@ -48,3 +48,9 @@ snow_elf:0 "Snow Elf"
 ynnerdar:0 "Ynnedar"
 ynnerdar_ADJ:0 "Ynnic"
 ynnerdar_ADJ2:0 "Ynnic"
+shuimu_state:0 "Shuimu State"
+shuimu_state_ADJ:0 "Shuimu"
+shuimu_state_ADJ2:0 "Shuimu"
+nurael:0 "Núrael"
+nurael_ADJ:0 "Núraelian"
+nurael_ADJ2:0 "Núraelian"
