--- a/localisation/cot_rp_rewards_l_english.yml
+++ b/localisation/cot_rp_rewards_l_english.yml
@@ -29,3 +29,10 @@
  goulha_mil_2:0 "Goulhá - Military Help [2]"
  goulha_mil_3:0 "Goulhá - Military Help [3]"
  taychend_hegemon:0 "Hegemon of the Taychend"
+ taychend_jewel:0 "Jewel of the Taychend"
+ ruin_post_adennor:0 "Country in Ruin"
+ the_pale_rose:0 "Queen-Mother Cassandra"
+ ice_lances:0 "Ice-Lances"
+ ynnic_grain:0 "Ynnic Grain Import"
+ lorent_orders:0 "Grand Orders of Lorent"
+ mega_damestear:0 "Massive damestear deposit"
