--- a/localisation/cot_rp_rewards_l_english.yml
+++ b/localisation/cot_rp_rewards_l_english.yml
@@ -35,4 +35,6 @@
  ice_lances:0 "Ice-Lances"
  ynnic_grain:0 "Ynnic Grain Import"
  lorent_orders:0 "Grand Orders of Lorent"
- mega_damestear:0 "Massive damestear deposit"
+ mega_damestear:0 "Massive damestear deposit" 
+ harimari_absolutism:0 "Harimari Absolutism"
+ home_moon_elf:0 "Home for Moon Elves"
