--- a/localisation/cot_formable_nations_decision_l_english.yml
+++ b/localisation/cot_formable_nations_decision_l_english.yml
@@ -54,3 +54,6 @@ shuimu_state_ADJ2:0 "Shuimu"
 nurael:0 "Núrael"
 nurael_ADJ:0 "Núraelian"
 nurael_ADJ2:0 "Núraelian"
+ynnais:0 "Ynneais"
+ynnais_ADJ:0 "Ynnic"
+ynnais_ADJ2:0 "Ynnic"
