--- a/localisation/cot_funky_shit_l_english.yml
+++ b/localisation/cot_funky_shit_l_english.yml
@@ -117,20 +117,20 @@ V08_ADJ2:0 "Seiranari"
 V08_ideas:0 "Seiranari Ideas"
 V08_ideas_start:0 "Seiranari Traditions"
 V08_ideas_bonus:0 "Seiranari Ambitions"
-V08_1:0 "A Helmet for every head."
-V08_1_desc:0 "Our people are few, we cannot afford the lackluster military policies of our human neighbours."
-V08_2:0 "Arbefer, the Pearl of the North"
-V08_2_desc:0 "The Capital of Seiranar, Arbefer has grown significantly since our country's formation, neat quarters, elven architecture and the massive and imposing Royal Palace have all taught our architects well."
-V08_3:0 "Omnipotent Monarchy"
-V08_3_desc:0 "Other countries embrace feudalism - an outdated system of opressors and opressed - we shall not repeat that mistake - all are property of our King."
-V08_4:0 "Sielviula - A vessel for its time"
-V08_4_desc:0 "Sielviula is a very specific type of a ship, very popular in Seiranar - Both simple and utilitarian, our mechants adore them - only grumblings about it come from our Navy, who see it as a useless, at least in military usage, craft."
-V08_5:0 "Mage-Child Policies"
-V08_5_desc:0 "Powerful Mages - altough very educated and valueable tend to be having no children, such potential cannot be wasted - we shall implement wide social policies to make sure that such waste happens no more."
-V08_6:0 "A Gilded Court"
-V08_6_desc:0 "Our court is the most wonderful of lies - one that hurts nobody, every keyhole a possible ear listening in, an eye observing, but fret not, if you're not doing anything bad, you have nothing to be afraid of."
-V08_7:0 "Seiranari Batteries."
-V08_7_desc:0 "When Seiranari needed cannons to keep up with the Cannorian advancements, we took our time, which resulted in batteries able to rival those of the Gnomes or Dwarves."
+V08_1:0 "A Helmet for every head"
+V08_1_desc:0 "The Elven paradox is and always will be our army - with it being notably more efficient and quality-driven, it is undercut by our slow, century long development process, where others need decades, we must introduce very efficient policies and decrees to make sure we never lack manpower for our wars, while not devastating our labour force between conflicts."
+V08_2:0 "Arbefer [Northern Pearl]"
+V08_2_desc:0 "The biggest city in our realm naturally became our capital as well - Formerly known as 'Bayvic', a symphony of modern architecture and our signature utilitarian style of governance - That is Arbefer."
+V08_3:0 "The Dalássa [Noble Lances]"
+V08_3_desc:0 "Our cavalry started as all do - Noble class able to afford horses and better weapons, after our policies of slowly strangling the nobility into obedience ending up with the near wiping of such a class in the first place, the only thing that stuck around is the name, let them keep it, for their 'noble deaths' shall fuel our expansion, Dalássa wear medium, scale armour - Being inspired by the Ourdian Hussars - Merely better equipped and led. "
+V08_4:0 "Gártha [Winter Ship], a ship for its time"
+V08_4_desc:0 "Gártha is what we need to be - Light-weight, yet Ocean-worthy vessel - While our over-reliance on it has left our shipyards without heavy ships, our merchants and civilians love it - Perfect for commerce and transport alike, their curved masts becoming a signature of any port on cannor that is worth anything."
+V08_5:0 "Seirèild - By Excellence alone"
+V08_5_desc:0 "The Passage into Maturity is a very important part of every Twilight Elf's life, one is expected to perform an extraordinary act, be it a new discovery, innovation or a military success, the more potential an Elf carries, the more ambitious his Seirèild, the bigger rewards in our society does he or she reap."
+V08_6:0 "The Gilded Court of Seiranar"
+V08_6_desc:0 "Our court is the most wonderful of lies - gilded welcoming for outsiders, but behind every keyhole an eye look, behind every wall an ear perked up."
+V08_7:0 "Omnipotent Monarchy"
+V08_7_desc:0 "Other countries embrace feudalism - an outdated system of opressors and opressed - we shall not repeat their mistakes - all are property of our Archons, living by their grace alone, living to serve and to prosper under our diligent gaze."
 
 V10:0 "Elvethán"
 V10_ADJ:0 "Elvetháni"
