--- a/localisation/cot_formable_nations_decision_l_english.yml
+++ b/localisation/cot_formable_nations_decision_l_english.yml
@@ -48,6 +48,9 @@ snow_elf:0 "Snow Elf"
 ynnerdar:0 "Ynnedar"
 ynnerdar_ADJ:0 "Ynnic"
 ynnerdar_ADJ2:0 "Ynnic"
+ynnais:0 "Ynnais"
+ynnais_ADJ:0 "Ynnic"
+ynnais_ADJ2:0 "Ynnic"
 shuimu_state:0 "Shuimu State"
 shuimu_state_ADJ:0 "Shuimu"
 shuimu_state_ADJ2:0 "Shuimu"
