localisation for rp bonuses

--- a/localisation/cot_rp_bonuses_l_english.yml
+++ b/localisation/cot_rp_bonuses_l_english.yml
@@ -42,3 +42,9 @@
  tech_cost_1:0 "RP Bonus: Technology Cost"
  tech_cost_2:0 "RP Bonus: Technology Cost"
  tech_cost_3:0 "RP Bonus: Technology Cost"
+ 
+ monarch_injured_3:0 "Monarch Injured - Severe"
+ larankarha_iron_hills:0 "Larankharha Iron Hills"
+ kheionai_war_fleet:0 "Kheionai War Fleet"
+ beauty_eternal:0 "Beauty Eternal"
+ blaidscall:0 "Blaidscall"
