rp bonuses/save edits

--- a/localisation/cot_rp_bonuses_l_english.yml
+++ b/localisation/cot_rp_bonuses_l_english.yml
@@ -48,3 +48,5 @@
  kheionai_war_fleet:0 "Kheionai War Fleet"
  beauty_eternal:0 "Beauty Eternal"
  blaidscall:0 "Blaidscall"
+ ripe_for_settlement_woods:0 "Ripe for Settlement"
+ ripe_for_settlement_jungle:0 "Ripe for Settlement"
