--- a/localisation/cot_rp_bonuses_l_english.yml
+++ b/localisation/cot_rp_bonuses_l_english.yml
@@ -50,3 +50,8 @@
  blaidscall:0 "Blaidscall"
  ripe_for_settlement_woods:0 "Ripe for Settlement"
  ripe_for_settlement_jungle:0 "Ripe for Settlement"
+ 
+ cot_eoa_verne_union.1.t:0 "Treaty of Dostanor"
+ cot_eoa_verne_union.1.d:0 "Due to the recent wars in Cannor with surrounding countries the rulers of Dostanor have come to us and offered their fealty. They will join a union under the empire until the threats of the Empire and its Iron Pact are no more. After such time, Dostanor will be returned its sovereignty."
+ cot_eoa_verne_union.1.a:0 "Take their throne!"
+ cot_eoa_verne_union.1.b:0 "Decline."
