--- a/localisation/cot_rp_bonuses_l_english.yml
+++ b/localisation/cot_rp_bonuses_l_english.yml
@@ -50,6 +50,7 @@
  blaidscall:0 "Blaidscall"
  ripe_for_settlement_woods:0 "Ripe for Settlement"
  ripe_for_settlement_jungle:0 "Ripe for Settlement"
+ korian_guns:0 "Korian's Guns"
  
  cot_eoa_verne_union.1.t:0 "Treaty of Dostanor"
  cot_eoa_verne_union.1.d:0 "Due to the recent wars in Cannor with surrounding countries the rulers of Dostanor have come to us and offered their fealty. They will join a union under the empire until the threats of the Empire and its Iron Pact are no more. After such time, Dostanor will be returned its sovereignty."
