--- a/localisation/cot_rp_rewards_l_english.yml
+++ b/localisation/cot_rp_rewards_l_english.yml
@@ -37,4 +37,12 @@
  lorent_orders:0 "Grand Orders of Lorent"
  mega_damestear:0 "Massive damestear deposit" 
  harimari_absolutism:0 "Harimari Absolutism"
- home_moon_elf:0 "Home for Moon Elves"
+ xylia_1:0 "Xylia Whiteblade"
+ xylia_2:0 "Xylia Whiteblade"
+ xylia_3:0 "Xylia Whiteblade"
+ party_1:0 "Royal Companions"
+ party_2:0 "Royal Companions"
+ party_3:0 "Royal Companions"
+ kylian_calindal:0 "Has Calindal"
+ aisgard_ice_guard:0 "Ice-Guard"
+ ashen_invasion:0 "Ashen Invasion"
