Ashscale stuff and decisions commented out

--- a/localisation/AshscaleMissions_l_english.yml
+++ b/localisation/AshscaleMissions_l_english.yml
@@ -64,7 +64,14 @@
  orghelo_conq_desc:0 ""
  orghelo_hold_title:0 "New Hovels"
  orghelo_hold_desc:0 ""
-
+ 
+ #Nations
+ V12:0 "Ashscale"
+ V12_ADJ:0 "Ashscale"
+ V12_ADJ2:0 "Ashscale"
+ V13:0 "Zutarzex"
+ V13_ADJ:0 "Zurtazex"
+ V13_ADJ2:0 "Zurtazex"
  #Custom Tooltips
  ash_claims:0 "Gain permanent claims on §Yall holds§! within the Serpent's Reach."
  ash_shanties:0 "Gain §Y'Shanty Town'§! Modifier on various caves next to our holds."
@@ -79,6 +86,38 @@
 
  #Event(s)
  ash_flavour_events.1.t:0 "Deciding our Path fowards"
- ash_flavour_events.1.d:0 "It is time, to decide how we will look outwards, is the world filled with friends to be made or enemies to fear?. Regardless of our decision, it's gonna take our full attention."
- ash_flavour_events.1.a:0 "Enemies! There are only those who want to kill us!"
- ash_flavour_events.1.b:0 "Everyone can be a Friend!"
+ ash_flavour_events.1.d:0 ""
+ ash_flavour_events.1.a:0 ""
+ ash_flavour_events.1.b:0 ""
+
+ #Modifier(s)
+ ash_dilemma:0 "Prepared to Fight!"
+ ash_colonist:0 "Kobold Population Boom"
+ ash_equipment:0 "Dragonforge Equipment"
+ ash_shanty:0 "Kobold Shanty-Town"
+ ash_burad:0 "Kobold Lair: Gor Burad"
+ ash_lodhum:0 "Kobold Lair: Ovdal Lodhum"
+ ash_skomdihr:0 "Kobold Lair: Verkal Skomdihr"
+ ash_ordstun:0 "Kobold Lair: Arg-Ordstun"
+ ash_shasztun:0 "Kobold Lair: Shazstundihr"
+ ash_orgh:0 "Kobold Lair: Orlghelovar"
+ ash_dragon_forge_1:0 "The Dragonforge"
+ ash_dragon_forge_2:0 "The Dragonforge"
+ ash_dragon_forge_3:0 "The Dragonforge"
+ ash_dragon_forge_final:0 "The Dragonforge"
+ ash_entrance_trap:0 "Trapped Entrance"
+ ash_administration:0 "Administrative Strain"
+ ash_resisted:0 "Resisted Conversion"
+ ash_converted:0 "Accepted Conversion"
+ ash_tax:0 "Use Taxes"
+ ash_produc:0 "Use Production Income"
+ ash_rec:0 "Use Military Workforce"
+ ash_head_adm:0 "Dragon Head: Administrative"
+ ash_head_dip:0 "Dragon Head: Production"
+ ash_head_mil:0 "Dragon Head: Traditionalist"
+ ash_torso_adm:0 "Dragon Torso: Construction"
+ ash_torso_dip:0 "Dragon Torso: Trade"
+ ash_torso_mil:0 "Dragon Torso: Morale"
+ ash_leg_adm:0 "Dragon Tail: Estates"
+ ash_leg_dip:0 "Dragon Tail: Steering"
+ ash_leg_mil:0 "Dragon Tail: Disciplin"
