--- a/localisation/SeiranarMissions_l_english.yml
+++ b/localisation/SeiranarMissions_l_english.yml
@@ -28,7 +28,7 @@
  temple_gold_desc:0 ""
  seize_gospel_title:0 "Seize The Gospel"
  seize_gospel_desc:0 ""
- men_woman_gods_title:0 "Men and Women of the Gods"
+ men_woman_gods_title:0 "Preach our Word"
  men_woman_gods_desc:0 ""
  grand_foundation_title:0 "Grand Foundations"
  grand_foundation_desc:0 ""
@@ -40,4 +40,40 @@
  #Reforms
  seiranari_monarchy_reform:0 "Seiranari Monarchy"
  seiranari_monarchy_reform_desc:0 ""
+ seiranari_gilded_court_reform:0 "The Gilded Court"
+ seiranari_gilded_court_reform_desc:0 "The Gilded Court"
  ARCHON:0 "Archon"
+ ARCHENA:0 "Archena"
+ DECHON:0 "Dechon"
+ DECHENA:0 "Dechena"
+ SEIR_HEIR_M:0 "Prince-Heir"
+ SEIR_HEIR_F:0 "Princess-Heir"
+
+
+ #Mission Modifiers
+ seiran_clerg:0 "Preach our Word"
+ seiran_arbe_foundations:0 "Arbefer - Foundations"
+ seiran_arbe_expanding:0 "Arbefer - Expanding"
+ seiran_archon_city:0 "City of the Archon"
+ seiran_ministry:0 "Ministry of Development"
+ seiran_army_grasp:0 "Army in our Grasp"
+ seiran_new_elf:0 "A New Kind of Elf"
+ seiran_absolute_monarchy:0 "Absolute War"
+ seiran_reach_hegemon:0 "Hegemon of the Reach"
+ seiran_great_war:0 "The Great War"
+ seiran_loyal_burghers:0 "Content Burghers"
+ seiran_disloyal_burghers:0 "Discontent Burghers"
+ seiran_loyal_nobles:0 "Content Nobles"
+ seiran_disloyal_nobles:0 "Discontent Nobles"
+ seiran_loyal_church:0 "Content Clergy"
+ seiran_disloyal_church:0 "Discontent Clergy"
+
+ #Events
+ seiran_events.1.t:0 "A New Nation"
+ seiran_events.1.d:0 "When Maldorian the Navigator Landed in what would become Celmador circa 1002 AA, his soft heart made him share the authority with those of feeble heart, no more - This world needs strong, gentle leadership, diligent and never wavering."
+ seiran_events.1.a:0 "Long live to our Archon!"
+ seiran_events.2.t:0 "Arbefer - Trade Goods"
+ seiran_events.2.d:0 "Arbefer has grown significantly, and our iron grasp on its development has let to use a choice, what industry shall we green-light to take over the city's"
+ seiran_events.2.a:0 "Cloth."
+ seiran_events.2.b:0 "Iron."
+ seiran_events.2.c:0 "Dyes."
