--- a/localisation/SeiranarMissions_l_english.yml
+++ b/localisation/SeiranarMissions_l_english.yml
@@ -58,7 +58,7 @@
  seiran_ministry:0 "Ministry of Development"
  seiran_army_grasp:0 "Army in our Grasp"
  seiran_new_elf:0 "A New Kind of Elf"
- seiran_absolute_monarchy:0 "Absolute War"
+ seiran_absolute_monarchy:0 "Absolute Monarchy"
  seiran_reach_hegemon:0 "Hegemon of the Reach"
  seiran_great_war:0 "The Great War"
  seiran_loyal_burghers:0 "Content Burghers"
