Seiranar Chapter 2 Electric Bogaloo

--- a/localisation/SeiranarMissions_l_english.yml
+++ b/localisation/SeiranarMissions_l_english.yml
@@ -77,3 +77,13 @@
  seiran_events.2.a:0 "Cloth."
  seiran_events.2.b:0 "Iron."
  seiran_events.2.c:0 "Dyes."
+
+ #Custom Tooltips
+ seiran_gnomish_vassal:0 "We will create a Vassal in the Dragon Coast Region." #WIP Change to your hearts content
+ seiran_no_mages_tt:0 "No Mages!?" #WIP Change to your hearts content
+ seiran_silver_age_tt:0 "Golden Age has ended at least 50 years ago."
+ gawedis_no_more:0 "Most Gawedis will return to their roots, becoming Old Alenic." #WIP Change to your hearts content
+ seiran_land_development:0 "We will cultivate the Forests and Marshes of our realm, making it easier to develop them."
+
+ #Province Group
+ seiran_jagged_coast_group:0 "The Jagged Coast"
