--- a/localisation/SeiranarMissions_l_english.yml
+++ b/localisation/SeiranarMissions_l_english.yml
@@ -42,12 +42,12 @@
  seiranari_monarchy_reform_desc:0 ""
  seiranari_gilded_court_reform:0 "The Gilded Court"
  seiranari_gilded_court_reform_desc:0 "The Gilded Court"
- ARCHON:0 "Archon"
- ARCHENA:0 "Archena"
- DECHON:0 "Dechon"
- DECHENA:0 "Dechena"
- SEIR_HEIR_M:0 "Prince-Heir"
- SEIR_HEIR_F:0 "Princess-Heir"
+ ARCHON:0 "Arkon"
+ ARCHENA:0 "Arkena"
+ DECHON:0 "Dekon"
+ DECHENA:0 "Dekena"
+ SEIR_HEIR_M:0 "First-Born"
+ SEIR_HEIR_F:0 "First-Born"
 
 
  #Mission Modifiers
