--- a/localisation/cot_formable_nations_decision_l_english.yml
+++ b/localisation/cot_formable_nations_decision_l_english.yml
@@ -41,19 +41,7 @@ V10_form_elvethan_desc:0 "The Sea Elven Flotilla has arrived."
  V05_form_adennor_desc:0 "Horses go brrrrr"
  
  
- #Snow Elves
-snow_elf:0 "Snow Elf"
+ #Aurora Elves
+aurora_elf:0 "Aurora Elf"
 
 #New Names
-ynnerdar:0 "Ynnedar"
-ynnerdar_ADJ:0 "Ynnic"
-ynnerdar_ADJ2:0 "Ynnic"
-shuimu_state:0 "Shuimu State"
-shuimu_state_ADJ:0 "Shuimu"
-shuimu_state_ADJ2:0 "Shuimu"
-nurael:0 "Núrael"
-nurael_ADJ:0 "Núraelian"
-nurael_ADJ2:0 "Núraelian"
-ynnais:0 "Ynneais"
-ynnais_ADJ:0 "Ynnic"
-ynnais_ADJ2:0 "Ynnic"
