Didn't ask, don't care

--- a/localisation/SeiranarMissions_l_english.yml
+++ b/localisation/SeiranarMissions_l_english.yml
@@ -12,7 +12,7 @@
  noble_influential_desc:0 ""
  strangle_useless_title:0 "Strangle the Useless"
  strangle_useless_desc:0 ""
- army_archon_title:0 "Army of Archon"
+ army_archon_title:0 "Army of Arkon"
  army_archon_desc:0 ""
  a_new_nation_title:0 "A New Nation"
  a_new_nation_desc:0 ""
@@ -34,11 +34,11 @@
  grand_foundation_desc:0 ""
  ever_expanding_title:0 "Ever Expanding"
  ever_expanding_desc:0 ""
- archons_city_title:0 "Archon's City"
+ archons_city_title:0 "Arkon's City"
  archons_city_desc:0 ""
  navy_question_title:0 "Question of the Navy"
  navy_question_desc:0 ""
- archons_finest_title:0 "Archon's Finest"
+ archons_finest_title:0 "Arkon's Finest"
  archons_finest_desc:0 ""
  chaos_agents_title:0 "Agents of Chaos"
  chaos_agents_desc:0 ""
@@ -64,6 +64,10 @@
  white_harbour_desc:0 ""
  arbefer_northern_jewel_title:0 "Our Jewel in the North"
  arbefer_northern_jewel_desc:0 ""
+ place_to_live_title:0 "Place to Live"
+ place_to_live_desc:0 ""
+ a_grand_century_title:0 "A Grand Century"
+ a_grand_century_desc:0 ""
 
  #Reforms
  seiranari_monarchy_reform:0 "Seiranari Monarchy"
@@ -82,7 +86,7 @@
  seiran_clerg:0 "Preach our Word"
  seiran_arbe_foundations:0 "Arbefer - Foundations"
  seiran_arbe_expanding:0 "Arbefer - Expanding"
- seiran_archon_city:0 "City of the Archon"
+ seiran_archon_city:0 "City of the Arkon"
  seiran_ministry:0 "Ministry of Development"
  seiran_army_grasp:0 "Army in our Grasp"
  seiran_new_elf:0 "A New Kind of Elf"
@@ -104,7 +108,7 @@
  #Events
  seiran_events.1.t:0 "A New Nation"
  seiran_events.1.d:0 "When Maldorian the Navigator Landed in what would become Celmador circa 1002 AA, his soft heart made him share the authority with those of feeble heart, no more - This world needs strong, gentle leadership, diligent and never wavering."
- seiran_events.1.a:0 "Long live to our Archon!"
+ seiran_events.1.a:0 "Long live to our Arkon!"
  seiran_events.2.t:0 "Arbefer - Trade Goods"
  seiran_events.2.d:0 "Arbefer has grown significantly, and our iron grasp on its development has let to use a choice, what industry shall we green-light to take over the city's"
  seiran_events.2.a:0 "Cloth."
