--- a/localisation/SeiranarMissions_l_english.yml
+++ b/localisation/SeiranarMissions_l_english.yml
@@ -125,6 +125,11 @@
  seiran_silver_age_tt:0 "Golden Age has ended at least 50 years ago."
  gawedis_no_more:0 "Most Gawedis will return to their roots, becoming Old Alenic." #WIP Change to your hearts content
  seiran_land_development:0 "We will cultivate the Forests and Marshes of our realm, making it easier to develop them."
+ seiran_isolation_path_tt:0 "We will turn inwards and focus on our domestic problems." #WIP Change to your hearts content
+ seiran_spotlight_path_tt:0 "We will turn outwards and show the world our might!" #WIP Change to your hearts content
+ seiran_chose_isolation:0 "Chose the Path of Isolation."
+ seiran_chose_spotlight:0 "Chose the Path into Spotlight."
 
  #Province Group
  seiran_jagged_coast_group:0 "The Jagged Coast"
+ seiran_giants_grave_sea_coast:0 "Giant's Grave Sea Coast"
