More Ashscale stuffs

--- a/localisation/AshscaleMissions_l_english.yml
+++ b/localisation/AshscaleMissions_l_english.yml
@@ -62,13 +62,33 @@
  orghelo_hold_title:0 "New Hovels"
  orghelo_hold_desc:0 ""
  
- #Nations
+ #Nations/Ideas
  V12:0 "Ashscale"
  V12_ADJ:0 "Ashscale"
  V12_ADJ2:0 "Ashscale"
  V13:0 "Zutarzex"
- V13_ADJ:0 "Zurtazex"
- V13_ADJ2:0 "Zurtazex"
+ V13_ADJ:0 "Zutarzexi"
+ V13_ADJ2:0 "Zutarzexi"
+ V13_ideas:0 "Zutarzexi Ideas"
+ V13_ideas_start:0 "Zutarzexi Traditions"
+ V13_ideas_bonus:0 "Zutarzexi Ambitions"
+ V13_1:0 "The Great Project"
+ V13_1_desc:0 ""
+ V13_2:0 "Serpentspine Undercities"
+ V13_2_desc:0 ""
+ V13_3:0 "Shanty Garrison"
+ V13_3_desc:0 ""
+ V13_4:0 "Teeming Masses"
+ V13_4_desc:0 ""
+ V13_5:0 "Breath of the Dragonforge"
+ V13_5_desc:0 ""
+ V13_6:0 "Servants of the Mecha-Dragon"
+ V13_6_desc:0 ""
+ V13_7:0 "Draconic Rule"
+ V13_7_desc:0 ""
+
+ #Culture
+ zutarzexi_kobold:0 "Zutarzexi Kobold"
 
  #Custom Tooltips
  ash_claims:0 "Gain permanent claims on §Yall holds§! within the Serpent's Reach."
@@ -79,6 +99,20 @@
  #Refom(s)
  techno_monarchy_reform:0 "Techno-Monarchy"
  techno_monarchy_reform_desc:0 "In the Techno-Monarchy the Ruler adopts the most gifted children into his family to ensure there is always a competent leader on the throne."
+ ZUTARZAN:0 "Zutarzan"
+ TINKERCOUNT:0 "Tinker-Count"
+ TINKERKING:0 "Tinker-King"
+ TINKEREMPEROR:0 "Tinker-Emperor"
+ TINKERCOUNTESS:0 "Tinker-Countess"
+ TINKERQUEEN:0 "Tinker-Queen"
+ TINKEREMPRESS:0 "Tinker-Empress"
+ ASSISTANTCOUNT:0 "Assistant-Count"
+ ASSISTANTKING:0 "Assistant-King"
+ ASSISTANTEMPEROR:0 "Assistant-Emperor"
+ ASSISTANCOUNTESS:0 "Assistant-Countess"
+ ASSISTANTQUEEN:0 "Assistant-Queen"
+ ASSISTANTEMPRESS:0 "Assistant-Empress"
+ FIRSTAPPRENTICE:0 "First Apprentice"
 
  #Event(s)
  ash_flavour_events.1.t:0 "Religious Turmoil"
@@ -113,6 +147,9 @@
  ash_flavour_events.7.a:0 "The Wise, no mere mortal can gain the knowledge he has."
  ash_flavour_events.7.b:0 "The Alloyed, he is the first."
  ash_flavour_events.7.c:0 "The Eternal, he will rule from now til forever."
+ ash_flavour_events.8.t:0 "A new Identity"
+ ash_flavour_events.8.d:0 ""
+ ash_flavour_events.8.a:0 "Our very own Kingdom!"
  #Modifier(s)
  ash_dilemma:0 "Prepared to Fight!"
  ash_colonist:0 "Staking Claim"
@@ -126,9 +163,9 @@
  ash_shasztun:0 "Kobold Lair: Shazstundihr"
  ash_orgh:0 "Kobold Lair: Orlghelovar"
  ash_dragon_forge_1:0 "The Dragonforge"
- ash_dragon_forge_2:0 "The Dragonforge"
- ash_dragon_forge_3:0 "The Dragonforge"
- ash_dragon_forge_final:0 "The Dragonforge"
+ ash_dragon_forge_2:0 "The Dragonforge Small Hoard"
+ ash_dragon_forge_3:0 "The Dragonforge Medium Hoard"
+ ash_dragon_forge_final:0 "The Dragonforge Great Hoard"
  ash_entrance_trap:0 "Trapped Entrance"
  ash_administration:0 "Administrative Strain"
  ash_resisted:0 "Resisted Conversion"
